# wow-analytics

./: .editorconfig  .markdownlint.yaml  .pre-commit-config.yaml  README.md  config.toml  main.py  mise.toml  pyproject.toml
notebooks/: explore_ah_parquet.ipynb  pull_wow_ah_parquet.ipynb
src/adapters/: __init__.py
src/adapters/blizzard_api/: __init__.py  auctions.py  base.py  client.py  items.py  recipes.py
src/adapters/storage/: __init__.py  local_writer.py  parquet_writer.py  s3_writer.py
src/config/: __init__.py  loader.py
src/domain/: __init__.py  models.py
src/notebooks/: explore_ah_parquet.ipynb  explorer.ipynb  feeder.ipynb  pull_wow_ah_parquet.ipynb
src/ports/: __init__.py  auction_house.py  blizzard_api.py  items.py  parquet_storage.py  recipes.py  storage.py
src/usecases/: __init__.py  data_transformers.py  fetch_and_store_auctions.py
