[project]
name = "wow-analytics"
version = "0.1.0"
description = "Proof of Concept regarding using Blizzard API, especially Auction House, to test analytics components."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "duckdb>=1.4.3",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
]
