[project]
name = "wow-analytics"
version = "0.1.0"
description = "Proof of Concept regarding using Blizzard API, especially Auction House, to test analytics components."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "authlib>=1.6.6",
  "boto3>=1.42.23",
  "httpx>=0.28.1",
  "pandas>=2.3.3",
  "pyarrow>=22.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "s3fs>=0.4.2",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 160
target-version = ['py312']
